--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,11 +12,12 @@
     <string name="Promotions">Promotions</string>
     <string name="TodayOffer">Today Offer</string>
     <string name="FreeBoxOfNuggets">Free Box Of Nuggets</string>
-    <string name="OnAllOrderAbove">On all order above $150</string>
+    <string name="OnAllOrderAbove">on all order above $150</string>
     <string name="Popular">Popular</string>
-    <string name="BeefBurger">BeefBurger</string>
-    <string name="CheesePizza">CheesePizza</string>
+    <string name="BeefBurger">Beef Burger</string>
+    <string name="CheesePizza">Cheese Pizza</string>
     <string name="s20">$20</string>
+    <string name="s32">$32</string>
     <string name="s48">4.8</string>
     <string name="BigJuicyBurger">Big juicy burger with cheese lettuce</string>
     <string name="TomatoOnion">tomato onions and special sauce</string>
