--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,8 +19,9 @@
     <string name="s20">$20</string>
     <string name="s32">$32</string>
     <string name="s48">4.8</string>
-    <string name="BigJuicyBurger">Big juicy burger with cheese lettuce</string>
-    <string name="TomatoOnion">tomato onions and special sauce</string>
+    <string name="s45">4.5</string>
+    <string name="BigJuicyBurger">Big juicy burger with cheese lettuce tomato onions and special sauce</string>
+    <string name="PizzaDist">Pizza is a dish of Italian origin consisting of a usually round</string>
     <string name="AddOns">Add ons</string>
     <string name="AddToCart">Add to cart</string>
     <string name="ItemsInCart">Items in Cart</string>
