--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,13 @@
     <string name="Checkout">Checkout</string>
     <string name="BackToMenu">Back to Menu</string>
     <string name="hello_world">Hello World</string>
+    <string name="SignUp">Sign Up</string>
+    <string name="SignIn">Sign In</string>
+    <string name="SignInToContinue">Sign In To Continue</string>
+    <string name="UserName">Username*</string>
+    <string name="Password">Password*</string>
+    <string name="ConfirmPassword">Confirm Password*</string>
+    <string name="ForgotPass">Forgot Password?</string>
+    <string name="TermsAndPrivacy">Terms and Conditions | Privacy Policy</string>
+    <string name="NewUserGetStartedNow">New User? Get Started Now</string>
 </resources>
